--- a/Bubble Pop/Bubble Pop/Base.lproj/Main.storyboard
+++ b/Bubble Pop/Bubble Pop/Base.lproj/Main.storyboard
@@ -369,8 +369,8 @@
         <scene sceneID="p98-pR-xTb">
             <objects>
                 <tableViewController title="High Score" id="3xc-e9-lJh" customClass="RankingTableViewController" customModule="Bubble_Pop" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="cUG-H8-PZd">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="cUG-H8-PZd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="410"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
@@ -463,8 +463,8 @@
                                 <rect key="frame" x="0.0" y="276" width="320" height="80"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wqv-Ms-Alf">
-                                        <rect key="frame" x="0.0" y="23" width="320" height="34"/>
-                                        <fontDescription key="fontDescription" name="DoubleBubbleShadow" family="Double•Bubble Shadow" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="17.5" width="320" height="45"/>
+                                        <fontDescription key="fontDescription" name="DoubleBubbleShadow" family="Double•Bubble Shadow" pointSize="26"/>
                                         <state key="normal" title="Let's pop some bubble!"/>
                                         <connections>
                                             <segue destination="WrR-1Q-vM7" kind="show" identifier="ToGameViewController" id="vRn-pp-jSm"/>
@@ -570,8 +570,8 @@
                                 <rect key="frame" x="0.0" y="276" width="320" height="80"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WOR-UV-rs5">
-                                        <rect key="frame" x="0.0" y="23" width="320" height="34"/>
-                                        <fontDescription key="fontDescription" name="DoubleBubbleShadow" family="Double•Bubble Shadow" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="17.5" width="320" height="45"/>
+                                        <fontDescription key="fontDescription" name="DoubleBubbleShadow" family="Double•Bubble Shadow" pointSize="26"/>
                                         <state key="normal" title="Let's pop some bubble!">
                                             <color key="titleColor" red="0.82661920789999999" green="0.27725849489999999" blue="0.31436890029999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </state>
@@ -638,7 +638,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hi-score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="haJ-7L-M6U">
-                                        <rect key="frame" x="203.5" y="15" width="116.5" height="18"/>
+                                        <rect key="frame" x="203.5" y="0.0" width="116.5" height="48"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -653,6 +653,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="gmm-zR-6ea" firstAttribute="centerY" secondItem="eZU-eU-afe" secondAttribute="centerY" id="6gZ-cl-A65"/>
+                                    <constraint firstItem="haJ-7L-M6U" firstAttribute="height" secondItem="ZWT-C8-XTb" secondAttribute="height" id="FaJ-mx-jQp"/>
                                     <constraint firstItem="eZU-eU-afe" firstAttribute="height" secondItem="ZWT-C8-XTb" secondAttribute="height" id="Gug-Ig-W7n"/>
                                     <constraint firstItem="eZU-eU-afe" firstAttribute="width" secondItem="ZWT-C8-XTb" secondAttribute="width" multiplier="3:11" id="HGI-jP-IrK"/>
                                     <constraint firstItem="gmm-zR-6ea" firstAttribute="width" secondItem="ZWT-C8-XTb" secondAttribute="width" multiplier="4:11" id="Lqo-g9-22a"/>
@@ -669,14 +670,36 @@
                                 <rect key="frame" x="0.0" y="68" width="320" height="412"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zx3-AG-BJ7">
+                                <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ready" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3f-ZK-Hgq">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
+                                        <fontDescription key="fontDescription" name="DoubleBubbleShadow" family="Double•Bubble Shadow" pointSize="60"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="o3f-ZK-Hgq" firstAttribute="leading" secondItem="zx3-AG-BJ7" secondAttribute="leading" id="C0j-jj-0tj"/>
+                                    <constraint firstItem="o3f-ZK-Hgq" firstAttribute="top" secondItem="zx3-AG-BJ7" secondAttribute="top" id="E0q-iK-5ca"/>
+                                    <constraint firstAttribute="trailing" secondItem="o3f-ZK-Hgq" secondAttribute="trailing" id="Tvv-Ow-lUx"/>
+                                    <constraint firstAttribute="bottom" secondItem="o3f-ZK-Hgq" secondAttribute="bottom" id="Z1A-eX-1cP"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ZWT-C8-XTb" firstAttribute="trailing" secondItem="2VD-Fi-Gsk" secondAttribute="trailing" id="175-UI-6Xb"/>
+                            <constraint firstItem="2VD-Fi-Gsk" firstAttribute="trailing" secondItem="zx3-AG-BJ7" secondAttribute="trailing" id="Mat-NQ-GaO"/>
+                            <constraint firstItem="2VD-Fi-Gsk" firstAttribute="bottom" secondItem="zx3-AG-BJ7" secondAttribute="bottom" id="Rg4-sa-h2Y"/>
                             <constraint firstItem="ZWT-C8-XTb" firstAttribute="height" secondItem="S49-Xq-eIb" secondAttribute="height" multiplier="1:10" id="Z5M-Kn-l7d"/>
                             <constraint firstItem="ZWT-C8-XTb" firstAttribute="top" secondItem="2VD-Fi-Gsk" secondAttribute="top" id="aQA-Jo-hir"/>
+                            <constraint firstItem="zx3-AG-BJ7" firstAttribute="leading" secondItem="2VD-Fi-Gsk" secondAttribute="leading" id="ax6-Bt-r3h"/>
                             <constraint firstItem="bkc-2K-lDn" firstAttribute="leading" secondItem="2VD-Fi-Gsk" secondAttribute="leading" id="bLK-6o-CuK"/>
                             <constraint firstItem="bkc-2K-lDn" firstAttribute="top" secondItem="ZWT-C8-XTb" secondAttribute="bottom" id="nLz-JV-hyN"/>
+                            <constraint firstItem="zx3-AG-BJ7" firstAttribute="top" secondItem="2VD-Fi-Gsk" secondAttribute="top" id="pMG-Ut-Zhq"/>
                             <constraint firstItem="bkc-2K-lDn" firstAttribute="bottom" secondItem="2VD-Fi-Gsk" secondAttribute="bottom" id="qjZ-Xj-fF7"/>
                             <constraint firstItem="bkc-2K-lDn" firstAttribute="trailing" secondItem="2VD-Fi-Gsk" secondAttribute="trailing" id="sBf-9Q-Hy1"/>
                             <constraint firstItem="ZWT-C8-XTb" firstAttribute="leading" secondItem="2VD-Fi-Gsk" secondAttribute="leading" id="vUN-mJ-dxf"/>
@@ -685,6 +708,8 @@
                     </view>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="countDownBackground" destination="zx3-AG-BJ7" id="YR4-jU-KeL"/>
+                        <outlet property="countDownLabel" destination="o3f-ZK-Hgq" id="z4a-8b-egr"/>
                         <outlet property="gameView" destination="bkc-2K-lDn" id="rhM-7y-RtL"/>
                         <outlet property="labelHiScore" destination="haJ-7L-M6U" id="zZq-Gc-9mR"/>
                         <outlet property="labelScore" destination="gmm-zR-6ea" id="q6P-Yz-xZm"/>
@@ -853,6 +878,6 @@
         <image name="settings.png" width="1049" height="1049"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="YIi-4X-jn5"/>
+        <segue reference="vRn-pp-jSm"/>
     </inferredMetricsTieBreakers>
 </document>
